# ngx_upstream_sentinel

./: .gitignore  LICENSE  pyproject.toml  ups_athenas.conf
ngx_upstream_sentinel/: __init__.py  pyproject.toml
ngx_upstream_sentinel/ngx_upstream_sentinel/: __init__.py
ngx_upstream_sentinel/tests/: test_ngx_upstream_sentinel.py
