[tool.poetry]
name = "ngx_upstream_sentinel"
version = "0.0.1"
description = "Smart Sentinel for Upstreams to nginx"
authors = ["Rodrigo Pinheiro Matias <rodrigomatias@mpto.mp.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
