[tool.poetry]
name = "ngx_upstream_sentinel"
version = "0.1.0"
description = ""
authors = ["Rodrigo Pinheiro Matias <rodrigopmatias@gmail.com>"]

[tool.poetry.scripts]
ngx_up_sentinel = "ngx_upstream_sentinel:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
